# emoji-picker

./: .gitignore  Cargo.toml  LICENSE  README.md  emoji.sublime-project  emoji.sublime-workspace
.config/emoji-picker/: nature.list  smileys.list  symbole.list
.rpm/: emoji-picker.spec
DEBIAN/: control  copyright  install
assets/: emoji-picker.desktop
assets/config/emoji-picker/: food.list  objects.list  smileys.list
assets/etc/emoji-picker/: acivity.list  animals.list  clothing.list  flags.list  gestures.list  objects.list  peoples.list  smileys.list  symbole.list  travel.list
assets/usr/share/applications/: emoji-picker.desktop
assets/usr/share/emoji-picker/: emoji-picker.css
assets/usr/share/emoji-picker/locale/: emoji-picker.ar.json  emoji-picker.da-DK.json  emoji-picker.de.json  emoji-picker.en-US.json  emoji-picker.en.json  emoji-picker.es.json  emoji-picker.fi.json  emoji-picker.fr.json  emoji-picker.it.json  emoji-picker.ja-JP.json  emoji-picker.nb-NO.json  emoji-picker.nl.json  emoji-picker.pl.json  emoji-picker.pt-BR.json  emoji-picker.pt.json  emoji-picker.ru.json  emoji-picker.sv.json  emoji-picker.tr.json  emoji-picker.uk-UA.json  emoji-picker.zh-CN.json
assets/usr/share/metainfo/: emoji-picker.appdata.xml
debian/: install
src/: dbus_api.rs  emoji_tabs.rs  gtk_theme.rs  i18n.rs  main.rs  settings.rs  shortcut.rs  suchlogik.rs
